syntax = "proto3";

package gateway.v1;

option go_package = "github.com/yogoosoft/elasticrelay/api/gateway/v1;gatewayv1";

// ChangeEvent represents a single data change event from the source.
message ChangeEvent {
  // Type of the change (CREATE, UPDATE, DELETE).
  string op = 1;
  // The transaction/commit information from the source.
  Checkpoint checkpoint = 2;
  // The primary key of the record.
  string primary_key = 3;
  // The data record after the change, in a standardized format (e.g., JSON string).
  string data = 4;
}

// Checkpoint holds the information about the source's position.
message Checkpoint {
  // === Universal Fields (New Design) ===
  // Generic position identifier that can represent any source type.
  // Format depends on source_type:
  // - MySQL: JSON {"file":"mysql-bin.000001","pos":12345}
  // - PostgreSQL: LSN string "0/17B4538"
  // - MongoDB: Resume token string
  string position = 10;
  
  // Source type: "mysql", "postgresql", "mongodb", "kafka", etc.
  string source_type = 11;
  
  // Additional metadata as key-value pairs (optional).
  map<string, string> metadata = 12;
  
  // Timestamp when this checkpoint was created (Unix timestamp in seconds).
  int64 timestamp = 13;
  
  // === Legacy Fields (Deprecated, for backward compatibility) ===
  // For MySQL: binlog file name.
  string mysql_binlog_file = 1 [deprecated = true];
  // For MySQL: binlog position.
  uint32 mysql_binlog_pos = 2 [deprecated = true];
  // For PostgreSQL: Log Sequence Number (LSN).
  string postgres_lsn = 3 [deprecated = true];
  // For MongoDB: resume token.
  string mongo_resume_token = 4 [deprecated = true];
}

// SnapshotChunk represents a chunk of data from an initial snapshot.
message SnapshotChunk {
  // The records in this chunk.
  repeated string records = 1;
  // A cursor indicating the position in the snapshot.
  string cursor = 2;
  // A hash for data validation (optional).
  string validation_hash = 3;
  // For MySQL: binlog file name at the time of snapshot start.
  string snapshot_binlog_file = 4;
  // For MySQL: binlog position at the time of snapshot start.
  uint32 snapshot_binlog_pos = 5;
}
