syntax = "proto3";

package gateway.v1;

option go_package = "github.com/yogoosoft/elasticrelay/api/gateway/v1;gatewayv1";

// OrchestratorService manages the lifecycle of synchronization jobs.
service OrchestratorService {
  rpc CreateJob(CreateJobRequest) returns (Job);
  rpc UpdateJob(UpdateJobRequest) returns (Job);
  rpc DeleteJob(DeleteJobRequest) returns (DeleteJobResponse);
  rpc GetJob(GetJobRequest) returns (Job);
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  rpc ScaleJob(ScaleJobRequest) returns (ScaleJobResponse);
}

message Job {
  string id = 1;
  string name = 2;
  string status = 3;
  // Job configuration in JSON format.
  string config = 4;
}

message CreateJobRequest {
  string name = 1;
  string config = 2; // JSON
}

message UpdateJobRequest {
  string id = 1;
  string config = 2; // JSON
}

message DeleteJobRequest {
  string id = 1;
}

message DeleteJobResponse {
  bool success = 1;
}

message GetJobRequest {
  string id = 1;
}

message ListJobsRequest {
  int32 page_size = 1;
  string page_token = 2;
  string filter = 3;
}

message ListJobsResponse {
  repeated Job jobs = 1;
  string next_page_token = 2;
}

message ScaleJobRequest {
  string id = 1;
  int32 concurrency = 2;
}

message ScaleJobResponse {
  bool success = 1;
}
